Tue Apr 05 22:15:05 BST 2005  Olly Betts <olly@survex.com>

	* examples/: Updated svn:ignore property.

Tue Apr 05 21:34:13 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/Makefile.am,configure.ac,extra/xapian/queryparser.h,
	  extra/,include/Makefile.am,Makefile.am: Move extra/ to queryparser/;
	  Merge extra/xapian/ into include/xapian/.

Tue Apr 05 16:37:32 BST 2005  Olly Betts <olly@survex.com>

	* m4/xapian.m4: Fix m4 quoting (argh!)

Tue Apr 05 16:28:06 BST 2005  Olly Betts <olly@survex.com>

	* m4/xapian.m4: Fix XO_LIB_XAPIAN to trim off any _svn6789 from
	  XAPIAN_VERSION.

Tue Apr 05 16:17:31 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Fix m4 quoting.

Tue Apr 05 15:16:38 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: #define VERSION in version.h shouldn't include any
	  _svn6789 suffix.

Tue Apr 05 13:28:23 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Snapshot generator now appends _svn6789 or similar to
	  the version string, so take that into account when finding REVISION.

Tue Apr 05 12:55:52 BST 2005  Olly Betts <olly@survex.com>

	* ChangeLog.examples,Makefile.am,examples/ChangeLog: Move
	  xapian-examples ChangeLog to ChangeLog.examples in the top-level
	  and include in the tarball.

Tue Apr 05 02:18:08 BST 2005  Olly Betts <olly@survex.com>

	* examples/dir_contents,examples/README: Converted xapian-examples
	  README into a dir_contents file.

Tue Apr 05 02:12:31 BST 2005  Olly Betts <olly@survex.com>

	* docs/overview.html,docs/install.html,configure.ac,Makefile.am,
	  xapian.spec.in,examples/Makefile.am: Moved xapian-examples module
	  to examples subdirectory of xapian-core.

Tue Apr 05 00:37:05 BST 2005  Olly Betts <olly@survex.com>

	* m4/.cvsignore,debian/.cvsignore,matcher/.cvsignore,docs/.cvsignore,
	  tests/.cvsignore,bin/.cvsignore,.cvsignore,autoconf/.cvsignore,
	  extra/.cvsignore,include/xapian/.cvsignore,include/.cvsignore,
	  net/.cvsignore,common/.cvsignore,testsuite/.cvsignore,