@@ -7,9 +7,6 @@ noinst_HEADERS = accentnormalisingitor.h symboltab.h queryparser_internal.h \
 
 noinst_LTLIBRARIES = libqueryparser.la
 
-check_PROGRAMS = queryparsertest
-TESTS = queryparsertest$(EXEEXT)
-
 lemon_built_sources = queryparser_internal.cc queryparser_token.h
 EXTRA_DIST = lemon.c queryparser.lemony queryparser.lt $(lemon_built_sources)
 
@@ -25,6 +22,3 @@ MAINTAINERCLEANFILES = lemon $(lemon_built_sources)
 endif
 
 libqueryparser_la_SOURCES = queryparser.cc queryparser_internal.cc
-
-queryparsertest_SOURCES = queryparsertest.cc
-queryparsertest_LDADD = @ldflags@ ../libxapian.la
