@@ -1,3 +1,8 @@
+Tue Apr 05 22:34:16 BST 2005  Olly Betts <olly@survex.com>
+
+	* queryparser/queryparsertest.cc,queryparser/Makefile.am,
+	  tests/Makefile.am: Moved queryparsertest into tests/.
+
 Tue Apr 05 22:15:05 BST 2005  Olly Betts <olly@survex.com>
 
 	* examples/: Updated svn:ignore property.
